<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scottmobleyschreibman.ribbit.LoginActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>


    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle"
        style="@style/AuthTitle.AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">


        <requestFocus/>
        </EditText>


        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            style="@style/AuthEditText"/>




    </LinearLayout>

    <Button
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"
        style="@style/AuthButton"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_hint"
        android:id="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>




</RelativeLayout>
