<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.scottmobleyschreibman.ribbit.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>


    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

    <EditText
        style="@style/AuthEditText"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint">

        <requestFocus/>
        </EditText>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"/>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"/>
    </LinearLayout>
    
    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>


    <Button
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signupButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"/>

    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton"/>
</RelativeLayout>
